Closed
Bug 1721838
Opened 4 years ago
Closed 4 years ago
Intermittent js\src\jit-test\tests\gc\incremental-abort.js | z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17 Error: Assertion failed: got false, expected true (code 3, args "--blinterp-eager") [0.8 s]
Categories
(Core :: JavaScript: GC, defect, P5)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
92 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jonco)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
Filed by: ncsoregi [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=345997699&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/FijdBVXBTaaKMNo0JbpBTw/runs/0/artifacts/public/logs/live_backing.log
[task 2021-07-22T11:40:18.751Z] TEST-PASS | js\src\jit-test\tests\gc\incremental-abort.js | Success (code 0, args "--no-blinterp --no-baseline --no-ion --more-compartments") [2.1 s]
[task 2021-07-22T11:40:19.521Z] z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17 Error: Assertion failed: got false, expected true
[task 2021-07-22T11:40:19.521Z]
[task 2021-07-22T11:40:19.521Z] Stack:
[task 2021-07-22T11:40:19.521Z]
[task 2021-07-22T11:40:19.521Z] testAbort@z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17
[task 2021-07-22T11:40:19.521Z]
[task 2021-07-22T11:40:19.521Z] @z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:53:10
[task 2021-07-22T11:40:19.521Z]
[task 2021-07-22T11:40:19.522Z] Exit code: 3
[task 2021-07-22T11:40:19.522Z] FAIL - gc\incremental-abort.js
[task 2021-07-22T11:40:19.522Z] TEST-UNEXPECTED-FAIL | js\src\jit-test\tests\gc\incremental-abort.js | z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17 Error: Assertion failed: got false, expected true (code 3, args "--blinterp-eager") [0.8 s]
[task 2021-07-22T11:40:19.522Z] INFO exit-status : 3
[task 2021-07-22T11:40:19.522Z] INFO timed-out : False
[task 2021-07-22T11:40:19.522Z] INFO stderr 2> z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17 Error: Assertion failed: got false, expected true
[task 2021-07-22T11:40:19.522Z] INFO stderr 2> Stack:
[task 2021-07-22T11:40:19.522Z] INFO stderr 2> testAbort@z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:44:17
[task 2021-07-22T11:40:19.522Z] INFO stderr 2> @z:\task_1626950169\src\js\src\jit-test\tests\gc\incremental-abort.js:53:10
[task 2021-07-22T11:40:21.008Z] TEST-PASS | js\src\jit-test\tests\gc\incremental-compacting.js | Success (code 0, args "") [1.5 s]
Comment 1•4 years ago
|
||
From bug 1721168?
status-firefox90:
--- → unaffected
status-firefox91:
--- → unaffected
status-firefox92:
--- → affected
status-firefox-esr78:
--- → unaffected
Flags: needinfo?(jcoppeard)
Keywords: regression
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)
| Assignee | ||
Comment 3•4 years ago
|
||
If we don't do this we get an extra unnecessary GC slice.
This bug was introduced because I changed GCRuntime::waitForBackgroundTask to
have two places where we wait but the check only happened on one of them.
I tidied up the test code but there are no actual changes.
Updated•4 years ago
|
Has Regression Range: --- → yes
Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/689c7bec3e58
Ensure we cancel the GC slice triggered when a background task finishes if we waited for the task on the main thread r=sfink
Comment 6•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•