Bug 1721838 - Ensure we cancel the GC slice triggered when a background task finishes if we waited for the task on the main thread r=sfink

If we don't do this we get an extra unnecessary GC slice.

This bug was introduced because I changed GCRuntime::waitForBackgroundTask to
have two places where we wait but the check only happened on one of them.

I tidied up the test code but there are no actual changes.

Differential Revision: https://phabricator.services.mozilla.com/D120829